--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
             voluptatem, dolore eos.
           </p>
           <div class="button-container">
-              <button class="prev-btn">
-                <i class="fas fa-chevron-left"></i>
-              </button>
-          </div>
-            <button class="next-btn">
-                <i class="fas fa-chevron-right"></i>
-            </button>
+              <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
+            <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
+            </div>
             <button class="random-btn"> Random</button>
         </article>
       </section>
@@ -43,4 +39,3 @@
   </body>
 </html>
 
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto nobis molestiae mollitia ipsum, placeat voluptates? At necessitatibus voluptatem maiores itaque!
