--- a/index.html
+++ b/index.html
@@ -19,13 +19,9 @@
           <div class="img-container">
             <img src="" id="person-img" alt="" />
           </div>
-          <h4 id="author">Sara Jones</h4>
-          <p id="job">US Deseign</p>
-          <p id="info">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum
-            dolor inventore esse ut laudantium exercitationem vel hic
-            voluptatem, dolore eos.
-          </p>
+          <h4 id="author"></h4>
+          <p id="job"></p>
+          <p id="info"></p>
           <div class="button-container">
               <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
             <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
